@@ -12,10 +12,6 @@
 
 
 library(RcppMsgPack)
-# library(Rcpp)
-# sourceCpp("src/msgpack_unpack.cpp")
-# sourceCpp("src/msgpack_pack.cpp")
-# source("R/functions.r")
 
 # stopifnot <- function(...) cat(..., "\n")
 
@@ -91,17 +87,18 @@ xu <- msgpack_unpack(xpk)
 stopifnot(identical(msgpack_simplify(xu[[6]]), 1:10))
 
 # speed test
-require(microbenchmark)
-x <- as.list(1:1e6)
-print(microbenchmark(xpk <- msgpack_pack(x), times=10)) # 500 ms
-print(microbenchmark(xu <- msgpack_unpack(xpk), times=10)) # 150 ms
-stopifnot(identical(xu, x))
+if (require(microbenchmark)) {
+    x <- as.list(1:1e6)
+    print(microbenchmark(xpk <- msgpack_pack(x), times=10)) # 500 ms
+    print(microbenchmark(xu <- msgpack_unpack(xpk), times=10)) # 150 ms
+    stopifnot(identical(xu, x))
 
-# vector input
-x <- 1:1e7
-print(microbenchmark(xpk2 <- msgpack_pack(x), times=10)) # 50 ms
-print(microbenchmark(xu <- msgpack_unpack(xpk2, simplify=T), times=10)) # 50 ms
-stopifnot(identical(xu, x))
+    ## vector input
+    x <- 1:1e7
+    print(microbenchmark(xpk2 <- msgpack_pack(x), times=10)) # 50 ms
+    print(microbenchmark(xu <- msgpack_unpack(xpk2, simplify=T), times=10)) # 50 ms
+    stopifnot(identical(xu, x))
+}
 
 # packed list and vector should be identical
 # stopifnot(identical(msgpack_simplify(xpk), xpk2))
